overflow fix mobile updated

--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -1,7 +1,9 @@
 .custome-accordion .accordion-button{
     font-size: 1.5rem;
 }
-
+html,body{
+    overflow-x: hidden;
+}
 
 .footer h3{
     font-weight: 600;
